// Vitest Snapshot v1

exports[`sml usecase test suites > only actor 2`] = `
"@startuml hello_usecase_diagram
!theme sketchy-outline
skinparam packageStyle Rectangle
left to right direction

actor :first actor: as a_dd79c149
actor :another actor: as a_fc3baf5b
actor :Last actor: as a_8b705053
@enduml"
`;

exports[`sml usecase test suites > test actor awesome style 1`] = `
"@startuml test_actor_awesome_style
!theme sketchy-outline
skinparam actorStyle awesome
skinparam packageStyle Rectangle
left to right direction

actor :User: as a_8f9bfe9d
usecase (Learn JavaScript) as uc_5d686b2e

a_8f9bfe9d --> uc_5d686b2e

@enduml"
`;

exports[`sml usecase test suites > test actor style 1`] = `
"@startuml test_actor_style
!theme sketchy-outline
skinparam packageStyle Rectangle
left to right direction

actor :user: as a_ee11cbb1
usecase (Write Blog) as uc_0cce1966

a_ee11cbb1 --> uc_0cce1966

@enduml"
`;

exports[`sml usecase test suites > test demo 2`] = `
"@startuml use_case_diagram
!theme sketchy-outline
skinparam packageStyle Rectangle
left to right direction

actor :Guest: as a_adb831a7
rectangle Professional {
actor :Chef: as a_8fd82b88
actor :Food Critic: as a_8781da4a
}
rectangle Restaurant {
  usecase \\"Eat food\\" as uc_39ce479e
  usecase \\"Pay for food\\" as uc_f870119e
  usecase \\"Drink\\" as uc_40491db1
  usecase \\"Review\\" as uc_457dd551
}

a_adb831a7 --> uc_39ce479e
a_adb831a7 --> uc_f870119e
a_adb831a7 --> uc_40491db1
a_adb831a7 --> uc_457dd551
a_8781da4a --> uc_457dd551

@enduml"
`;

exports[`sml usecase test suites > test note on simple actor or usecase 1`] = `
"@startuml test_simple_note
!theme sketchy-outline
skinparam packageStyle Rectangle
left to right direction

actor :User: as a_8f9bfe9d
usecase (Coding) as uc_cddcade0

note right of (a_8f9bfe9d)
  a student user
end note
note right of (uc_cddcade0)
  Coding Rust
end note

@enduml"
`;

exports[`sml usecase test suites > test only usecases 2`] = `
"@startuml hello_usecase_diagram
!theme sketchy-outline
skinparam packageStyle Rectangle
left to right direction

usecase (blog) as uc_126ac9f6
usecase (music) as uc_18d67699
usecase (play) as uc_a3b34c08
@enduml"
`;

exports[`sml usecase test suites > test packages 1`] = `
"@startuml hello_usecase_diagram
!theme sketchy-outline
skinparam packageStyle Rectangle
left to right direction

actor :guest: as a_084e0343
rectangle Restaurant {
  usecase \\"Eat Food\\" as uc_a6709cd3
  usecase \\"Pay for food\\" as uc_f870119e
}
rectangle Professional {
actor :Chef: as a_8fd82b88
}

note \\"guest note\\" as N0
(a_084e0343) -- N0
N0 --> (uc_a6709cd3)
note \\"guest note\\" as N1
(a_084e0343) -- N1
N1 --> (uc_f870119e)
a_8fd82b88 --> uc_a6709cd3

@enduml"
`;

exports[`sml usecase test suites > test rect 2`] = `
"@startuml hello_usecase_diagram
!theme sketchy-outline
skinparam packageStyle Rectangle
left to right direction

actor :Food Critic: as a_8781da4a
rectangle Restaurant {
  usecase \\"Eat Food\\" as uc_a6709cd3
  usecase \\"Pay for food\\" as uc_f870119e
  usecase \\"Drink\\" as uc_40491db1
}

a_8781da4a --> uc_a6709cd3
a_8781da4a --> uc_f870119e
a_8781da4a --> uc_40491db1

@enduml"
`;
